--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
 @import url('variables.css');
 @import url('base.css');
-@import url('components/sidebar.css');
-@import url('components/container.css');
+@import url('layout/sidebar.css');
+@import url('layout/container.css');
 @import url('components/typography.css');
 @import url('components/settings.css');
-@import url('components/forms.css');
+@import url('components/inputs.css');
 @import url('components/buttons.css');
 @import url('components/scrollbar.css');
 @import url('components/modal.css');
